--- a/template/registration/login.html
+++ b/template/registration/login.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>ログイン</title>
-    </head>
+{% extends 'base.html' %}
 
-    <body>
-        <h2>ログイン</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Login</button>
-        </form>
-    </body>
-</html>
+{% block title %}Login{% endblock %}
+{% block content %}
+<h2>ログイン</h2>
+<form method="post">
+    {% csrf_token %}
+     {% for error in form.non_field_errors %}
+    <div class="alert alert-danger" role="alert">
+        {{ error }}
+    </div>
+    {% endfor %}
+    <input type="text" id="inputUserName" name="username" class="form-control" placeholder="ユーザー名" required autofocus>
+   <input type="password" id="inputPassword" name="password" class="form-control" placeholder="パスワード" required>
+   <button class="btn btn-lg btn-primary my-1" type="submit">ログイン</button>
+</form>
+<p>アカウントをお持ちではないですか？<a href="{% url 'signup' %}">サインアップ</a></p>
+{% endblock %}
