--- a/template/home.html
+++ b/template/home.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Home</title>
-  </head>
+{% extends 'base.html' %}
 
-    <body>
-        {% if user.is_authenticated %}
-            <p>こんにちは! {{ user.username }}さん！</p>
-            <a href="{% url 'logout' %}">Log Out</a>
-        {% else %}
-            <p>ログインしてません</p>
-            <a href="{% url 'login' %}">Log In</a>
-        {% endif %}
-    </body>
-</html>
+{% block title %}Home{% endblock %}
+{% block content %}
+{% if user.is_authenticated %}
+    <p>こんにちは! {{ user.username }}さん！</p>
+    <a href="{% url 'logout' %}">Log Out</a>
+{% else %}
+    <p>ログインしてません</p>
+    <a href="{% url 'login' %}">Log In</a>
+{% endif %}
+{% endblock %}
